@@ -260,15 +260,7 @@ public class ClassScanner {
     @SuppressWarnings({"boxing", "checkstyle:cyclomaticcomplexity", "unchecked"})
     private <T> T constructArg(Class<T> cls, Args mode, Stack<Class> stack) throws InstantiationException {
         T arg = null;
-        try {
-            T cachedValue = getCachedValue(cls);
-        } catch (StackOverflowError r) {
-            String message = "OUTPUT: Class name " + cls.getSimpleName() + "Args mode: " + mode.name() + " stack " +
-                    stack.toString();
-
-            throw new RuntimeException("Stack overflow " + message, r);
-        }
-
+        T cachedValue = getCachedValue(cls);
 
         if (cls.isPrimitive()) {
             arg = cachedValue;
@@ -296,7 +288,7 @@ public class ClassScanner {
             arg = constructSubclass(cls, mode, stack);
         } else {
             try {
-                arg = cls.newInstance();
+                arg = cls.getConstructor().newInstance();
             } catch (Throwable ignored) {
                 try {
                     arg = constructObject(cls, mode, stack);
